compiler-core/src/type_/tests/snapshots/gleam_core__type___tests__errors__accessor_multiple_variants_multiple_positions.snap
---
source: compiler-core/src/type_/tests/errors.rs
expression: "\npub type Person {\n    Teacher(name: String, title: String, age: Int)\n    Student(name: String, age: Int)\n}\npub fn get_name(person: Person) { person.name }\npub fn get_age(person: Person) { person.age }"
---
error: Unknown record field
  ┌─ /src/one/two.gleam:7:40
  │
7 │ pub fn get_age(person: Person) { person.age }
  │                                        ^^^^ Did you mean `name`?

The value being accessed has this type:

    Person

It has these fields:

    .name

Note: The field you are trying to access might not be consistently present or positioned across the custom type's variants, preventing reliable access. Ensure the field exists in the same position and has the same type in all variants to enable direct accessor syntax.
