compiler-core/src/type_/tests/snapshots/gleam_core__type___tests__errors__add_f_int_float.snap
---
source: compiler-core/src/type_/tests/errors.rs
expression: 1 +. 1.0
---
----- SOURCE CODE
1 +. 1.0

----- ERROR
error: Type mismatch
  ┌─ /src/one/two.gleam:1:1
  │
1 │ 1 +. 1.0
  │ ^

The +. operator expects arguments of this type:

    Float

But this argument has this type:

    Int

Hint: The + operator can be used with Ints
