compiler-core/src/type_/tests/snapshots/gleam_core__type___tests__errors__alias_with_param_type_mismatch_error_message.snap
---
source: compiler-core/src/type_/tests/errors.rs
expression: "type Pair(a) = #(a, a)\n\npub fn bad() -> Pair(Int) {\n  #(1, \"hello\")\n}"
---
----- SOURCE CODE
type Pair(a) = #(a, a)

pub fn bad() -> Pair(Int) {
  #(1, "hello")
}

----- ERROR
error: Type mismatch
  ┌─ /src/one/two.gleam:4:3
  │
4 │   #(1, "hello")
  │   ^^^^^^^^^^^^^

The type of this returned value doesn't match the return type
annotation of this function.

Expected type:

    Pair(Int)

Found type:

    #(Int, String)
